# internal-debiasing-audit-af4e

./: .resource_finder_complete  README.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
papers/pages/: akyurek_2022_challenges_measuring_bias_generation_manifest.txt  basu_2025_fundamental_limits_concept_erasure_manifest.txt  belrose_2023_LEACE_concept_erasure_manifest.txt  cao_2022_intrinsic_extrinsic_fairness_metrics_manifest.txt  gonen_goldberg_2019_lipstick_on_a_pig_manifest.txt  iluz_2024_intrinsic_debiasing_downstream_manifest.txt  kaneko_2024_gaps_pretrain_downstream_bias_manifest.txt  orgad_2022_choose_your_lenses_gender_bias_eval_manifest.txt  panickssery_2023_CAA_steering_llama2_manifest.txt  parrish_2022_BBQ_bias_benchmark_QA_manifest.txt  ravfogel_2020_INLP_nullspace_projection_manifest.txt  zou_2023_representation_engineering_manifest.txt
results/: all_results.json  probe_results.json
src/: activation_extraction.py  analysis.py  behavioral_eval.py  config.py  interventions.py  probes.py  run_experiment.py
